# TDDGoogleTest

./: CMakeLists.txt  README.md  example.cpp
include/: dummy.h  foo.h  foo_if.h  mock_foo.h
src/: dummy.cpp  foo.cpp
test/: testDummy.cpp
